# flatness-guided-hpo

./: .gitignore  README.md  pyproject.toml  requirements.txt
bbo_challenge/results/breast_stcvx/derived/: MLP-adam_breast_acc.json  MLP-adam_breast_nll.json  baseline.json  eval.json  time.json
bbo_challenge/results/diabetes_stcvx/derived/: MLP-adam_diabetes_mae.json  MLP-adam_diabetes_mse.json  baseline.json  eval.json  time.json
bbo_challenge/results/digits_stcvx/derived/: MLP-adam_digits_acc.json  MLP-adam_digits_nll.json  baseline.json  eval.json  time.json
bbo_challenge/stats/: breast.py  diabetes.py  digits.py  experiment_analysis.py  iris.py  main.py  wine.py
bbo_challenge/strong_convexity/: optimizer.py
hpobench/: Flatness Over Time.ipynb  README.md  bohb_hpo.py  hebo_hpo.py  hyperopt_hpo.py  random_hpo.py  stcvx.py  turbo_hpo.py
hpobench/parsers/: parse.py  parse.pysh  parse_stcvx.py  parse_stcvx.pysh
hpobench/results/: .gitignore
hpobench/results/kcl/: bohb.txt
hpobench/runtimes/: ENVIRONMENT.txt
hpobench/runtimes/vehicle/: hebo.txt
hpobench/util/: config.py  eval.py  experiment.py  model.py  stcvx.py
image/: Flatness Over Time.ipynb  README.md  bohb_hpo.py  common.py  hebo_hpo.py  hess.py  hyperopt_hpo.py  opentuner_hpo.py  random_hpo.py  stats.py  stats.pysh  stcvx.py  trace.py  trace_multigpu.py  turbo_hpo.py
image-rs/: .gitignore  Cargo.toml  build.sh
image-rs/src/: augment.rs  config.rs  data.rs  error.rs  main.rs  model.rs  util.rs
image/parsers/: parse.py  parse.pysh  parse_opentuner.py  parse_opentuner.pysh  parse_random_svhn.py  parse_random_svhn.pysh  parse_turbo.py  parse_turbo.pysh
image/results/: .gitignore
image/src/: config.py  data.py  util.py
mnist/: bohb_hpo.py  hebo_hpo.py  parse.py  parse.pysh  stats.py  stats.pysh  turbo_hpo.py
mnist/parsers/: parse-opentuner.py  parse-opentuner.pysh  parse-turbo.py  parse-turbo.pysh  parse_turbo.py
mnist/results/: .gitignore
mnist/results/random/: slurm-12098.out  slurm-12101.out
mnist/results/stcvx/: slurm-11209.out  slurm-11210.out  slurm-11212.out  slurm-11213.out  slurm-11214.out  slurm-11215.out  slurm-11216.out  slurm-11217.out  slurm-11218.out  slurm-11219.out  slurm-11220.out  slurm-11221.out  slurm-11222.out  slurm-11223.out  slurm-11224.out  slurm-11225.out  slurm-11226.out  slurm-11227.out  slurm-11228.out
mnist/src/: util.py
(+76 files in other folders)
