[project]
name = "flatness-guided-hpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backpack-for-pytorch>=1.7.1",
    "bohb-hpo>=0.5.2",
    "gpy>=1.13.2",
    "hebo",
    "keras>=3.0.0",
    "lightning>=2.5.0.post0",
    "openml>=0.15.1",
    "opentuner>=0.8.8",
    "ruff>=0.14.0",
    "scikit-learn>=1.6.1",
    "scipy-stubs>=1.17.0.2",
    "tensorflow>=2.20.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv]
override-dependencies = [
    "numpy>=1.25.0,<2.0.0"
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "D101",
    "D103",
    "D203",
    "D213",
    "N806",
    "PLR0913",
    "S311",
    "TRY003",
    "COM812",
    "PLE1205"
]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
